# graphblas_sparse_linear_algebra

./: .gitignore  .gitmodules  Cargo.toml  Contributor_License_Agreement.md  README.md  build.rs
graphblas_sparse_linear_algebra/: Cargo.toml  README.md  build.rs
graphblas_sparse_linear_algebra/benches/: apply_binary_operator.rs  insert_scalar_into_matrix.rs  vector_indices.rs
graphblas_sparse_linear_algebra/src/: lib.rs
graphblas_sparse_linear_algebra/src/bindings_to_graphblas_implementation/: mod.rs  wrapper.rs
graphblas_sparse_linear_algebra/src/collections/: collection.rs  iterator.rs  mod.rs
graphblas_sparse_linear_algebra/src/collections/serializer/: lz4_serializer.rs  lz4hc_serializer.rs  mod.rs  serializer.rs  serializer_without_compression.rs  zstd_serializer.rs
graphblas_sparse_linear_algebra/src/collections/sparse_matrix/: coordinate.rs  element.rs  handle.rs  mod.rs  size.rs  sparse_matrix.rs  view.rs
graphblas_sparse_linear_algebra/src/collections/sparse_matrix/operations/: create.rs  deserialize.rs  drop_element.rs  get_element.rs  get_element_coordinates.rs  get_element_list.rs  get_element_value.rs  get_element_values.rs  get_size.rs  is_element.rs  mod.rs  resize.rs  serialize.rs  set_element.rs  sort.rs
graphblas_sparse_linear_algebra/src/collections/sparse_scalar/: mod.rs  sparse_scalar.rs
graphblas_sparse_linear_algebra/src/collections/sparse_vector/: element.rs  handle.rs  mod.rs  sparse_vector.rs  view.rs
graphblas_sparse_linear_algebra/src/context/: configuration.rs  context.rs  mod.rs
graphblas_sparse_linear_algebra/src/context/memory_allocator/: jemalloc.rs  memory_allocator.rs  mimalloc.rs  mod.rs
graphblas_sparse_linear_algebra/src/error/: graphblas_error.rs  logic_error.rs  mod.rs  other_error.rs  sparse_linear_algebra_error.rs  system_error.rs
graphblas_sparse_linear_algebra/src/index/: diagonal_index.rs  element_index.rs  element_index_selector.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/: kronecker_product.rs  mask.rs  mod.rs  options.rs  transpose.rs
graphblas_sparse_linear_algebra/src/operators/apply/: binary_operator.rs  binary_operator_eval_space.rs  index_unary_operator.rs  mod.rs  unary_operator.rs
graphblas_sparse_linear_algebra/src/operators/binary_operator/: binary_operator.rs  binary_operator_eval_space.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/element_wise_addition/: element_wise_matrix_addition.rs  element_wise_vector_addition.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/element_wise_multiplication/: element_wise_matrix_multiplication.rs  element_wise_vector_multiplication.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/extract/: extract_matrix_column.rs  extract_matrix_row.rs  extract_sub_matrix.rs  extract_sub_vector.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/index_unary_operator/: index_unary_operators.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/insert/: insert_matrix_into_matrix.rs  insert_scalar_into_matrix.rs  insert_scalar_into_vector.rs  insert_vector_into_column.rs  insert_vector_into_row.rs  insert_vector_into_vector.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/iterator/: graphblas_iterator.rs  mod.rs  vector_element_index_iterator.rs  vector_element_iterator.rs  vector_element_value_iterator.rs
graphblas_sparse_linear_algebra/src/operators/monoid/: mod.rs  monoid.rs
graphblas_sparse_linear_algebra/src/operators/multiplication/: matrix_multiplication.rs  matrix_vector_multiplication.rs  mod.rs  vector_matrix_multiplication.rs
graphblas_sparse_linear_algebra/src/operators/options/: descriptor.rs  mod.rs  operator_options.rs  operator_with_matrix_argument_options.rs  operator_with_matrix_as_first_argument_options.rs  operator_with_matrix_as_second_argument_options.rs  operator_with_transposable_arguments_options.rs  options.rs  options_for_operator_with_matrix_argument.rs  options_for_operator_with_matrix_arguments.rs  options_for_operator_with_matrix_as_first_argument.rs  options_for_operator_with_matrix_as_second_argument.rs  options_for_operator_with_transposable_arguments.rs
graphblas_sparse_linear_algebra/src/operators/reduce/: binary_operator.rs  mod.rs  monoid.rs
graphblas_sparse_linear_algebra/src/operators/select/: diagonal_index.rs  matrix.rs  mod.rs  vector.rs
graphblas_sparse_linear_algebra/src/operators/semiring/: mod.rs  semiring.rs
graphblas_sparse_linear_algebra/src/operators/subinsert/: insert_matrix_into_sub_matrix.rs  insert_scalar_into_sub_matrix.rs  insert_scalar_into_sub_vector.rs  insert_vector_into_sub_column.rs  insert_vector_into_sub_row.rs  insert_vector_into_sub_vector.rs  mod.rs
graphblas_sparse_linear_algebra/src/operators/unary_operator/: mod.rs  unary_operators.rs
graphblas_sparse_linear_algebra/src/util/: diagonal_index.rs  element_index.rs  mod.rs
graphblas_sparse_linear_algebra/src/value_type/: custom_value_type.rs  mod.rs  type_conversion.rs  utilities_to_implement_traits_for_all_value_types.rs  value_type.rs  value_type_convertable_to_boolean.rs
graphblas_sparse_linear_algebra/src/value_types/: mod.rs  utilities_to_implement_traits_for_all_value_types.rs
graphblas_sparse_linear_algebra/src/value_types/sparse_matrix/: size.rs  sparse_matrix.rs
graphblas_sparse_linear_algebra/src/value_types/sparse_scalar/: sparse_scalar.rs
graphblas_sparse_linear_algebra/src/value_types/sparse_vector/: element.rs
graphblas_sparse_linear_algebra/src/value_types/value_type/: built_in_value_type.rs  custom_value_type.rs  mod.rs  value_type.rs  value_type_convertable_to_boolean.rs
graphblas_sparse_linear_algebra/tests/: doc_test.rs  mod.rs
graphblas_sparse_linear_algebra_proc_macros/: Cargo.toml
graphblas_sparse_linear_algebra_proc_macros/src/: lib.rs
suitesparse_graphblas_sys/: .gitignore  Cargo.toml  README.md  build.rs  readme.md
suitesparse_graphblas_sys/graphblas_implementation/: suitesparse_graphblas_bindings.rs
suitesparse_graphblas_sys/graphblas_implementation/OpenMP/: README.md
suitesparse_graphblas_sys/src/: graphblas_bindings.rs  lib.rs
(+129 files in other folders)
