[package]
name = "graphblas_sparse_linear_algebra"
version = "0.4.4"
authors = ["code_sam <mail@samdekker.nl>"]
description = "Wrapper for SuiteSparse:GraphBLAS"
edition = "2018"
keywords = ["GraphBLAS", "sparse", "linear", "algebra"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/code-sam/graphblas_sparse_linear_algebra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {version = "1.7"}

[features]
default = ["build_static_graphblas_dependencies"]
build_static_graphblas_dependencies = []
generate_new_bindings_to_graphblas_implementation = []

[build-dependencies]
bindgen = "0.58"
cmake = "0.1"

[dev-dependencies]
criterion = "0.3"
rayon = {version = "1.5"}

[[bench]]
name = "insert_scalar_into_matrix"
harness = false
