[package]
name = "graphblas_sparse_linear_algebra"
version = "0.8.1"
authors = ["code_sam <mail@samdekker.nl>"]
description = "Wrapper for SuiteSparse:GraphBLAS"
edition = "2018"
keywords = ["GraphBLAS", "sparse", "linear", "algebra"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/graphblas_sparse_linear_algebra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {version = "1.8"}

[features]
default = ["build_static_graphblas_dependencies"]
build_static_graphblas_dependencies = []
generate_new_bindings_to_graphblas_implementation = []

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"

[dev-dependencies]
criterion = "0.3"
rayon = {version = "1.5"}

[[bench]]
name = "insert_scalar_into_matrix"
harness = false
