[package]
name = "graphblas_sparse_linear_algebra"
version = "0.18.0"
authors = ["code_sam <mail@samdekker.nl>"]
description = "Wrapper for SuiteSparse:GraphBLAS"
edition = "2021"
keywords = ["GraphBLAS", "sparse", "linear", "algebra"]
categories = ["api-bindings", "mathematics"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/graphblas_sparse_linear_algebra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suitesparse_graphblas_sys = {version = "0.1"}
graphblas_sparse_linear_algebra_proc_macros = {path = "../graphblas_sparse_linear_algebra_proc_macros", version = "0.3"}
once_cell = {version = "1.15"}
paste = {version = "1.0"}
rayon = {version = "1.5"}

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "insert_scalar_into_matrix"
harness = false
