[package]
name = "graphblas_sparse_linear_algebra"
version = "0.62.0"
authors = ["code_sam <mail@samdekker.nl>"]
description = "Wrapper for SuiteSparse:GraphBLAS"
edition = "2021"
keywords = ["math", "GraphBLAS", "sparse", "linear-algebra"]
categories = ["api-bindings", "mathematics"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/graphblas_sparse_linear_algebra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suitesparse_graphblas_sys = {path = "../suitesparse_graphblas_sys", version = "0.4.3"}
graphblas_sparse_linear_algebra_proc_macros = {path = "../graphblas_sparse_linear_algebra_proc_macros", version = "0.3.1"}
once_cell = {version = "1.18"}
paste = {version = "1.0"}
rayon = {version = "1.8"}
mimalloc = { version = "0.1", default-features = false, optional = true }
libmimalloc-sys = { version = "0.1", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }
libc = {version = "0.2" }

[features]
build-standard-kernels = ["suitesparse_graphblas_sys/build-standard-kernels"]
disable-just-in-time-compiler = ["suitesparse_graphblas_sys/disable-just-in-time-compiler"]
memory-allocator-mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
memory-allocator-jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-sys"]

[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[[bench]]
# name = "insert_scalar_into_matrix"
name = "vector_indices"
harness = false
