[package]
name = "graphblas_sparse_linear_algebra_proc_macros"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-4.0"
authors = ["code_sam <mail@samdekker.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = {version = "1.0"}
